the tests refered to the first stage, commented out extra