@@ -5,15 +5,17 @@ import java.util.Random;
 
 public class Universe {
     private final int size;
+    private final int seed;
 
     Generation currentGeneration;
 
-    public Universe(int size) {
+    public Universe(int size, int seed) {
         this.size = size;
+        this.seed = seed;
     }
 
     public void generateNew() {
-        Random random = new Random();
+        Random random = new Random(seed);
 
         boolean[][] map = new boolean[size][size];
         for (int r = 0; r < size; r++) {
@@ -28,36 +30,37 @@ public class Universe {
         currentGeneration = currentGeneration.getNextGeneration();
     }
 
-    public void runUniverse() {
-        int generations = 10;
-        Thread universeThread = new Thread();
+    public void runUniverse(int generations) {
+//        Thread universeThread = new Thread();
 
-        for (int i = 1; i <= generations; i++) {
+        for (int i = 0; i < generations; i++) {
+            advanceGeneration();
+        }
             // clears console output
-            try {
-                if (System.getProperty("os.name").contains("Windows")) {
-                    new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-                } else {
-                    Runtime.getRuntime().exec("clear");
-                }
-            } catch (IOException | InterruptedException e) {
-            }
+//            try {
+//                if (System.getProperty("os.name").contains("Windows")) {
+//                    new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+//                } else {
+//                    Runtime.getRuntime().exec("clear");
+//                }
+//            } catch (IOException | InterruptedException e) {
+//            }
 
-            System.out.println("Generation: #" + i);
-            System.out.println("Alive: " + currentGeneration.getAlive());
+            //System.out.println("Generation: #" + i);
+            //System.out.println("Alive: " + currentGeneration.getAlive());
 
             // prints generation
             currentGeneration.print();
 
-            advanceGeneration();
-            try {
-                synchronized (universeThread) {
-                    universeThread.wait(1000L);
-                }
-            } catch(InterruptedException e) {
-               System.out.println("Universe Interrupted");
-               return;
-            }
-        }
+//            advanceGeneration();
+//            try {
+//                synchronized (universeThread) {
+//                    universeThread.wait(1000L);
+//                }
+//            } catch(InterruptedException e) {
+//               System.out.println("Universe Interrupted");
+//               return;
+//            }
+        //}
     }
 }
